--- a/estilos.css
+++ b/estilos.css
@@ -218,115 +218,195 @@ footer{
 }
 /*fin footer*/
 /*landing*/
-/*seccion 1 (inicio)*/
+/*seccion 1 (inicio)*//* Reset general */
+/* Contenedor principal */
+/* Contenedor principal */
 #Inicio {
-    position: relative; /* Permite posicionar elementos hijos */
-    background-image: url('imagenes/fondoLandingPage.jpg'); /* Imagen de fondo */
-    background-size: cover; /* Ajusta el tamaño de la imagen al contenedor */
-    background-position: center; /* Centra la imagen */
-    height: 35em; /* Altura de la sección */
-    width: 100%;
+    position: relative;
+    background-image: url('imagenes/fondoLandingPage.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 40em;
     display: flex;
-    justify-content: flex-start; /* Alinea el contenido al inicio (izquierda) */
-    padding-left: 3em; /* Espacio a la izquierda */
-    padding-top: 2em;
+    padding: 1em;
+    padding-left: 3em;
 }
 
 #Inicio::before {
-    content: ''; /* Crea un elemento vacío */
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white; /* Color blanco */
-    opacity: 0.3; /* Ajusta el nivel de transparencia */
-    z-index: 0; /* Asegura que la superposición esté detrás del texto */
+    background-color: white;
+    opacity: 0.3;
+    z-index: 0;
 }
 
 #Inicio h1 {
     position: relative;
+    font-size: 5em;
     width: 10em;
-    font-size: 5em; /* Ajusta el tamaño del texto */
-    margin: 0; /* Elimina los márgenes */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); /* Agrega sombra al texto */
-    z-index: 1; /* Asegura que el texto esté por encima de la superposición */
-    color: black; /* Asegura que el texto sea visible */
-}
-#segundaParte {
-    background-color: white;
+    margin-bottom: 0.5em;
+    color: black;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
     z-index: 1;
-    display: flex;
-    justify-content: center; /* Centra horizontalmente */
-    align-items: center; /* Centra verticalmente */
-    text-align: center;
-    flex-direction: column;
-    border-radius: 4em;
-    border-color: rgb(0, 51, 102);
-    border-width: 0.2em;
-    border-style: solid;
-    height: 20em; /* Asegúrate de que este valor sea adecuado para el contenido */
 }
 
-#segundaParte h5 {
-    width: 100%;
-    height: auto; /* Ajusta el alto según el contenido */
-}
-
-#segundaParte input {
-    width: 80%; /* Ajusta el tamaño de los inputs si es necesario */
-    margin: 0.5em 0; /* Agrega un margen entre los inputs */
-    height: 5em;
-    border-radius: 3em;
-    text-align: center;
-    border-style: none;
-    background-color: rgb(244, 244, 244);
-}
-#segundaParte #botonUnirse {
-    height: 3em;
-    width: 10em;
-    border-radius: 0.5em;
-    background-color:rgb(0, 86, 179);
-}
+/* Timer */
 #divTimer {
-    position: relative; /* Necesario para que z-index funcione */
+    position: relative;
     z-index: 1;
     display: flex;
+    flex-wrap: wrap;
+    gap: 1em;
 }
-.circuloTimer {
-    width: 0.5em;      /* Ancho del círculo */
-    height: 0.5em;     /* Alto del círculo */
-    margin-top: 1em;
-    background-color: rgb(0, 116, 217); /* Color de fondo del círculo */
-    border-radius: 50%; /* Convierte el cuadrado en un círculo */
-    display: inline-block; /* Hace que se comporte como un elemento en línea */
+
+.subTextTimer {
+    text-align: center;
 }
-.circulosMedios {
-    display: flex;
-    flex-direction: column;
-}
+
 .rectanguloTimer {
-    width: 6em;          /* Ancho del rectángulo */
-    height: 9em;         /* Alto del rectángulo */
-    background-color: rgb(0, 116, 217); /* Color de fondo del rectángulo */
-    border-radius: 3em;
-    
-}
-@font-face {
-    font-family: 'Peany Timer';
-    src: url('fonts/peany-timer.woff2') format('woff2'), /* Para navegadores modernos */
-         url('fonts/peany-timer.woff') format('woff');   /* Compatibilidad adicional */
-    font-weight: normal;
-    font-style: normal;
+    width: 5em;
+    height: 7em;
+    background-color: rgb(0, 116, 217);
+    border-radius: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .timer {
-    font-size: 6em; /* Tamaño de la fuente */
+    font-size: 2.5em;
     color: white;
-    text-align: center;
-    font-family: 'Peany Timer'; /* Agrega una fuente de respaldo */    
-    justify-content: center;
+    font-family: 'Peany Timer', Arial, sans-serif;
 }
+
+h3 {
+    margin-top: 0.5em;
+    font-size: 1em;
+    color: black;
+}
+
+.circulosMedios {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 7em;
+}
+
+.circuloTimer {
+    width: 0.5em;
+    height: 0.5em;
+    background-color: rgb(0, 116, 217);
+    border-radius: 50%;
+}
+
+/* Segunda Parte (Formulario) */
+#segundaParte {
+    position: relative;
+    background-color: white;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    border-radius: 2em;
+    border: 0.2em solid rgb(0, 51, 102);
+    padding: 1em;
+    width: 90%;
+    justify-content: center;
+    max-height: 22em;
+    max-width: 23em;
+    margin-top: 10em;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+#segundaParte h5 {
+    font-size: 1em;
+    margin-bottom: 1em;
+}
+
+#segundaParte input {
+    width: 100%;
+    margin: 0.5em 0;
+    height: 3em;
+    border-radius: 1.5em;
+    text-align: center;
+    border-style: none;
+    background-color: rgb(244, 244, 244);
+    font-size: 1em;
+}
+
+#segundaParte #botonUnirse {
+    height: 3em;
+    width: 60%;
+    border-radius: 0.5em;
+    background-color: rgb(0, 86, 179);
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    border: none;
+    margin-top: 1em;
+}
+
+#segundaParte #botonUnirse:hover {
+    background-color: rgb(0, 51, 102);
+}
+
+/* MEDIA QUERIES PARA RESPONSIVE DESIGN */
+
+/* Pantallas de tamaño mediano */
+@media (max-width: 768px) {
+    #Inicio h1 {
+        font-size: 2em;
+    }
+    .rectanguloTimer {
+        width: 4.5em;
+        height: 6em;
+    }
+    .timer {
+        font-size: 2em;
+    }
+    h3 {
+        font-size: 0.9em;
+    }
+}
+
+/* Pantallas pequeñas (móviles) */
+@media (max-width: 480px) {
+    #Inicio {
+        padding: 0.5em;
+    }
+    #Inicio h1 {
+        font-size: 1.8em;
+        width: 100%;
+    }
+    #divTimer {
+        gap: 0.5em;
+    }
+    .rectanguloTimer {
+        width: 4em;
+        height: 5.5em;
+    }
+    .timer {
+        font-size: 1.8em;
+    }
+    h3 {
+        font-size: 0.8em;
+    }
+    #segundaParte {
+        padding: 0.5em;
+        width: 95%;
+    }
+    #segundaParte input {
+        height: 2.5em;
+    }
+    #segundaParte #botonUnirse {
+        width: 80%;
+    }
+} 
 /*seccion 2 (informacion)*/
 h2 {
     text-align: center;
