--- a/estilos.css
+++ b/estilos.css
@@ -276,11 +276,16 @@ footer{
     justify-content: center;
     align-items: center;
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 .timer {
+    font-family: 'Roboto';
     font-size: 2.5em;
     color: white;
-    font-family: 'Peany Timer', Arial, sans-serif;
+}
+.roboto-thin {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
 }
 
 h3 {
@@ -378,6 +383,8 @@ h3 {
 @media (max-width: 480px) {
     #Inicio {
         padding: 0.5em;
+        display: flex;
+        flex-direction: column;
     }
     #Inicio h1 {
         font-size: 1.8em;
@@ -387,8 +394,8 @@ h3 {
         gap: 0.5em;
     }
     .rectanguloTimer {
-        width: 4em;
-        height: 5.5em;
+        width: 3em;
+        height: 4.5em;
     }
     .timer {
         font-size: 1.8em;
